// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResponsiveGridAddressRow  /> should match snapshot 1`] = `
.c0 {
  font-family: Rubik;
  font-size: 18px;
  line-height: 24px;
  background-color: #ffffff;
  color: #16213E;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
  style="min-height: 100dvh;"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      To
    </span>
  </div>
  <div
    class="c3"
  >
    <span
      class="c2"
    >
      My Contact
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    />
  </div>
  <div
    class="c3"
  >
    <span
      class="c4"
      style="font-family: Roboto mono; letter-spacing: 0;"
    >
      <span
        class="notranslate"
        translate="no"
      >
        oasis1 qq2v zcvx n0js 5uns ch5m e2xz 4kr4 3vca sv0d 5eq4
      </span>
    </span>
  </div>
</div>
`;

exports[`<ResponsiveGridRow /> should render component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Type
    </span>
  </div>
  <div
    class="c2"
  >
    transfer
  </div>
</div>
`;
